List,add,delete user
Added listing, adding and deleting of user and jwt tokens now stored in local storage